final code for wishlist

--- a/index.html
+++ b/index.html
@@ -3,41 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Shhava - Could This BE Any More Perfect?" />
-    <meta property="og:description" content="Legen... wait for it... DARY dating app where your story begins! How you doin'? Ready to find The One?" />
-    <meta
-      property="og:image"
-      content="https://images.unsplash.com/photo-1518709268805-4e9042af2176?w=1200&h=630&fit=crop"
-      type="image/png"
-    />
-    <meta
-      property="og:url"
-      content="https://howimetyou.app"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:author" content="Shhava" />
-    <meta property="og:site_name" content="Shhava" />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:site" content="@howimetyou_app" />
-    <meta property="twitter:title" content="Shhava - Could This BE Any More Perfect?" />
-    <meta property="twitter:description" content="Legen... wait for it... DARY dating app where your story begins! How you doin'? Ready to find The One?" />
-    <meta
-      property="twitter:image"
-      content="https://images.unsplash.com/photo-1518709268805-4e9042af2176?w=1200&h=630&fit=crop"
-      type="image/png"
-    />
-    <link
-      rel="shortcut icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💜</text></svg>"
-      type="image/svg+xml"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💜</text></svg>"
-      type="image/svg+xml"
-    />
+
+    <!-- Primary Meta Tags -->
     <title>Shhava - Could This BE Any More Perfect?</title>
+    <meta
+      name="description"
+      content="Shhava is the legen… wait for it… DARY! dating app where your rom-com love story begins. Safe, fun, and sitcom-level epic. Ready to find The One? ❤️"
+    />
+    <meta
+      name="keywords"
+      content="dating app, online dating, free dating sites, best dating apps, tinder, hinge, bumble, hookup, speed dating near me, blind date, first date, international dating sites, rom-com dating app"
+    />
+    <meta name="author" content="Shhava" />
+    <meta name="publisher" content="Shhava" />
+    <link rel="canonical" href="https://shhava.com/" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (Facebook / LinkedIn) -->
+    <meta property="og:title" content="Shhava - Could This BE Any More Perfect?" />
+    <meta
+      property="og:description"
+      content="Legen... wait for it... DARY dating app where your story begins! How you doin'? Ready to find The One?"
+    />
+    <meta property="og:image" content="./public/favicon.png" />
+    <meta property="og:url" content="https://shhava.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Shhava" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@shhavahoi" />
+    <meta name="twitter:title" content="Shhava - Could This BE Any More Perfect?" />
+    <meta
+      name="twitter:description"
+      content="Legen... wait for it... DARY dating app where your story begins! How you doin'? Ready to find The One?"
+    />
+    <meta name="twitter:image" content="./public/favicon.png" />
+
+    <!-- Icons -->
+    <link rel="icon" href="./public/favicon.png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/favicon.png" />
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Shhava",
+        "url": "https://shhava.com",
+        "logo": "./public/favicon.png",
+        "sameAs": [
+          "https://twitter.com/shhavahoi",
+          "https://instagram.com/shhavahoi",
+          "https://linkedin.com/company/shhavahoi"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
